Cleanup Move nextDrawable to present Mixins init